--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.1",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+      "start": "electron .",
+      "postinstall": "electron-rebuild"
   },
   "author": "Martin Sosic",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.4.1",
+    "electron-rebuild": "^1.5.7"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "node-edlib": "^1.0.0"
   }
 }
